# legacy-sipXlang-pl

./: configure.ac  sipxecs-lang-pl.spec.in  sipxlang-pl.spec.in
sipxpbx/: sipxplugin.beans.xml
