AC_PREREQ(2.57)
AC_INIT(sipxlang-pl, 4.6.0, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([sipxpbx/WEB-INF/sipXconfig-web_pl.properties])
AM_INIT_AUTOMAKE(foreign tar-ustar)
m4_include([config/sipXlib2.m4])
AC_SUBST(LANG_ID, pl)
AC_CONFIG_FILES([
  Makefile
  sipxlang-pl.spec
])
AC_OUTPUT
